start projeto semafaro

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="button" value="Vermelho" id="red">
             <input type="button" value="Amarelo" id="yellow">
             <input type="button" value="Verde" id="green">
-            <input type="button" value="Automático" id="automatc">
+            <input type="button" value="Automático" id="automatic">
         </div>
     </main>
 <script src="script.js"></script>   
